--- a/gitclass/profile.html
+++ b/gitclass/profile.html
@@ -1,2 +1,4 @@
 <h1>Welcome to my profile</h1>
 <h2>Enjoy your stay</h2>
+<img src="imgs/ellaphant.jpg" alt="my pic" height="50%">
+<footer>this is a footer</footer>
